log
Wed 24 Apr 2024 05:29:58 AM UTC: 
 tests:  0|6
total_score: 0/70
142eba2
Wed 24 Apr 2024 01:20:00 PM UTC: 
 hashmap.c | 8 +++++++-
 1 file changed, 7 insertions(+), 1 deletion(-)
 tests:  0|0
7afc619
Wed 24 Apr 2024 01:21:17 PM UTC: 
 hashmap.c | 8 ++------
 1 file changed, 2 insertions(+), 6 deletions(-)
In file included from test.c:4:
hashmap.c: In function ‘createMap’:
hashmap.c:59:1: error: control reaches end of non-void function [-Werror=return-type]
   59 | }
      | ^
cc1: all warnings being treated as errors
Compilation failed
2a75d19
